--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,8 @@ munkres==1.1.4
 numpy==1.23.5
 opencv_python==4.6.0.66
 Pillow==9.3.0
-torch==1.9.0+cu111
-torchvision==0.10.0+cu111
+json_tricks
+pycocotools==2.0.2
+scipy==1.7.1
+#torch==1.9.0+cu111
+#torchvision==0.10.0+cu111
